# legalease

./: .gitignore  CONTRIBUTING.md  Dockerfile  README.md  cuda.Dockerfile  pyproject.toml
components/gpt4/: client.py
components/whisper.cpp/: python_script_test.py
legalease/: __init__.py
obsidian/Excalidraw/: Whiteboarding.md
obsidian/Notes/: planning.md
obsidian/revealai-legalease/: Legalease.md
obsidian/revealai-legalease/Notes/: Initial Meeting.md
server/: app.py  legalease_app.py
server/endpoints/: classification.py  summarization.py  transcription.py
server/frameworks/: api.py  mongo.py  serializers.py  storage.py
src/: classify.py  parse_utils.py  placeholder.py  run.py  summarize.py  transcribe.py  upload_audio.py  utils.py
test_scripts/: test_upload_audio.py
