[tool.poetry]
name = "legalease"
version = "0.1.0"
description = ""
authors = ["karanpraharaj <karanpraharaj@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ane-transformers = "^0.1.3"
coremltools = "^7.1"
pywhispercpp = "^1.1.3"
docker = "^7.0.0"
openai = "^1.10.0"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
transformers = "^4.36.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
